--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
-  <title>Bootcamp Codespace Redux</title>
+  <title>Weedding Cloud</title>
 </head>
 
 <body>
