--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/styles/root.scss">
   <!--Import Google Icon Font-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Text+Me+One" rel="stylesheet">
 <!-- Compiled and minified CSS -->
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css"> -->
   <title>Weedding Cloud</title>
